[package]
name = "theme-helixfier"
version = "1.0.1"
edition = "2024"
description = "Convert vscode theme into helix theme, all automated!"
repository = "https://codeberg.org/DM-Earth/theme-helixfier"
license = "AGPL-3.0-or-later"
keywords = ["helix", "theme", "vscode"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9", default-features = false, features = ["display", "serde", "std"] }
hex_color = "3.0"
clap_lex = "0.7"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
panic = "abort"
